syntax = "proto3";

package ScriptsOfTributeGRPC;

enum PlayerEnum
{
    PLAYER1 = 0;
    PLAYER2 = 1;
    NO_PLAYER_SELECTED = 2;
}

enum PatronId {
	ANSEI = 0;
	DUKE_OF_CROWS = 1;
	RAJHIN = 2;
	PSIJIC = 3;
	ORGNUM = 4;
	HLAALU = 5;
	PELIN = 6;
	RED_EAGLE = 7;
	TREASURY = 8;
}

enum CardType {
	ACTION = 0;
	AGENT = 1;
	CONTRACT_ACTION = 2;
	CONTRACT_AGENT = 3;
 	STARTER = 4;
	CURSE = 5;
}

enum BoardState
{
    NORMAL = 0;
    CHOICE_PENDING = 1;
    START_OF_TURN_CHOICE_PENDING = 2;
    PATRON_CHOICE_PENDING = 3;
}

enum ChoiceFollowUp
{
    ENACT_CHOSEN_EFFECT = 0;
    REPLACE_CARDS_IN_TAVERN = 1;
    DESTROY_CARDS = 2;
    DISCARD_CARDS = 3;
    REFRESH_CARDS = 4;
    TOSS_CARDS = 5;
    KNOCKOUT_AGENTS = 6;
    ACQUIRE_CARDS = 7;
    COMPLETE_HLAALU = 8;
    COMPLETE_PELLIN = 9;
    COMPLETE_PSIJIC = 10;
    COMPLETE_TREASURY = 11;
}

enum ChoiceDataType
{
    EFFECT = 0;
    CARD = 1;
}

enum ChoiceType
{
    CARD_EFFECT = 0;
    EFFECT_CHOICE = 1;
    PATRON_ACTIVATION = 2;
}

enum CompletedActionType
{
    BUY_CARD_ACTION = 0;
    ACQUIRE_CARD_ACTION = 1;
    PLAY_CARD_ACTION = 2;
    ACTIVATE_AGENT_ACTION = 3;
    ACTIVATE_PATRON_ACTION = 4;
    ATTACK_AGENT_ACTION = 5;
    AGENT_DEATH_ACTION = 6;
    GAIN_COIN_ACTION = 7;
    GAIN_POWER_ACTION = 8;
    GAIN_PRESTIGE_ACTION = 9;
    OPP_LOSE_PRESTIGE_ACTION = 10;
    REPLACE_TAVERN_ACTION = 11;
    DESTROY_CARD_ACTION = 12;
    DRAW_ACTION = 13;
    DISCARD_ACTION = 14;
    REFRESH_ACTION = 15;
    TOSS_ACTION = 16;
    KNOCKOUT_ACTION = 17;
    ADD_PATRON_CALLS_ACTION = 18;
    ADD_SUMMERSET_SACKING_ACTION = 19;
    ADD_BEWILDERMENT_TO_OPPONENT_ACTION = 20;
    ADD_WRIT_OF_COIN_ACTION = 21;
    HEAL_AGENT_ACTION = 22;
    END_TURN_ACTION = 23;
}

enum EffectType
{
    GAIN_COIN = 0;
    GAIN_POWER = 1;
    GAIN_PRESTIGE = 2;
    OPP_LOSE_PRESTIGE = 3;
    REPLACE_TAVERN = 4;
    ACQUIRE_TAVERN = 5;
    DESTROY_CARD = 6;
    DRAW = 7;
    OPP_DISCARD = 8;
    RETURN_TOP = 9;
    TOSS = 10;
    KNOCKOUT = 11;
    PATRON_CALL = 12;
    CREATE_SUMMERSET_SACKING = 13;
    HEAL = 14;
}

enum MoveEnum
{
    PLAY_CARD = 0;
    ACTIVATE_AGENT = 1;
    ATTACK = 2;
    BUY_CARD = 3;
    CALL_PATRON = 4;
    MAKE_CHOICE = 5;
    END_TURN = 6;
}

enum CardId
{
    CURRENCY_EXCHANGE = 0;
    LUXURY_EXPORTS = 1;
    OATHMAN = 2;
    EBONY_MINE = 3;
    HLAALU_COUNCILOR = 4;
    HLAALU_KINSMAN = 5;
    HOUSE_EMBASSY = 6;
    HOUSE_MARKETPLACE = 7;
    KWAMA_EGG_MINE = 8;
    HIRELING = 9;
    HOSTILE_TAKEOVER = 10;
    CUSTOMS_SEIZURE = 11;
    GOODS_SHIPMENT = 12;
    MIDNIGHT_RAID = 13;
    BLOOD_SACRIFICE = 14;
    BLOODY_OFFERING = 15;
    BONFIRE = 16;
    BRIARHEART_RITUAL = 17;
    CLANWITCH = 18;
    ELDER_WITCH = 19;
    HAGRAVEN = 20;
    HAGRAVEN_MATRON = 21;
    IMPERIAL_PLUNDER = 22;
    IMPERIAL_SPOILS = 23;
    KARTH_MANHUNTER = 24;
    WAR_SONG = 25;
    BLACKFEATHER_KNAVE = 26;
    PLUNDER = 27;
    TOLL_OF_FLESH = 28;
    TOLL_OF_SILVER = 29;
    MURDER_OF_CROWS = 30;
    PILFER = 31;
    SQUAWKING_ORATORY = 32;
    LAW_OF_SOVEREIGN_ROOST = 33;
    POOL_OF_SHADOW = 34;
    SCRATCH = 35;
    BLACKFEATHER_BRIGAND = 36;
    BLACKFEATHER_KNIGHT = 37;
    PECK = 38;
    CONQUEST = 39;
    GRAND_ORATORY = 40;
    HIRAS_END = 41;
    HEL_SHIRA_HERALD = 42;
    MARCH_ON_HATTU = 43;
    SHEHAI_SUMMONING = 44;
    WARRIOR_WAVE = 45;
    ANSEI_ASSAULT = 46;
    ANSEIS_VICTORY = 47;
    BATTLE_MEDITATION = 48;
    NO_SHIRA_POET = 49;
    WAY_OF_THE_SWORD = 50;
    PROPHESY = 51;
    SCRYING_GLOBE = 52;
    THE_DREAMING_CAVE = 53;
    AUGURS_COUNSEL = 54;
    PSIJIC_RELICMASTER = 55;
    SAGE_COUNSEL = 56;
    PRESCIENCE = 57;
    PSIJIC_APPRENTICE = 58;
    CEPORAHS_INSIGHT = 59;
    PSIJICS_INSIGHT = 60;
    TIME_MASTERY = 61;
    MAINLAND_INQUIRIES = 62;
    RALLY = 63;
    SIEGE_WEAPON_VOLLEY = 64;
    THE_ARMORY = 65;
    BANNERET = 66;
    KNIGHT_COMMANDER = 67;
    REINFORCEMENTS = 68;
    ARCHERS_VOLLEY = 69;
    LEGIONS_ARRIVAL = 70;
    SHIELD_BEARER = 71;
    BANGKORAI_SENTRIES = 72;
    KNIGHTS_OF_SAINT_PELIN = 73;
    THE_PORTCULLIS = 74;
    FORTIFY = 75;
    BAG_OF_TRICKS = 76;
    BEWILDERMENT = 77;
    GRAND_LARCENY = 78;
    JARRING_LULLABY = 79;
    JEERING_SHADOW = 80;
    MOONLIT_ILLUSION = 81;
    POUNCE_AND_PROFIT = 82;
    PROWLING_SHADOW = 83;
    RINGS_GUILE = 84;
    SHADOWS_SLUMBER = 85;
    SLIGHT_OF_HAND = 86;
    STUBBORN_SHADOW = 87;
    SWIPE = 88;
    TWILIGHT_REVELRY = 89;
    GHOSTSCALE_SEA_SERPENT = 90;
    KING_ORGNUMS_COMMAND = 91;
    MAORMER_BOARDING_PARTY = 92;
    MAORMER_CUTTER = 93;
    PYANDONEAN_WAR_FLEET = 94;
    SEA_ELF_RAID = 95;
    SEA_RAIDERS_GLORY = 96;
    SEA_SERPENT_COLOSSUS = 97;
    SERPENTGUARD_RIDER = 98;
    SERPENTPROW_SCHOONER = 99;
    SNAKESKIN_FREEBOOTER = 100;
    STORM_SHARK_WAVECALLER = 101;
    SUMMERSET_SACKING = 102;
    AMBUSH = 103;
    BARTERER = 104;
    BLACK_SACRAMENT = 105;
    BLACKMAIL = 106;
    GOLD = 107;
    HARVEST_SEASON = 108;
    IMPRISONMENT = 109;
    RAGPICKER = 110;
    TITHE = 111;
    WRIT_OF_COIN = 112;
}